Addressing some issues from the comments
Todo section has been removed from the Readme, some of them have been
moved to our Issue Tracker: http://tickets.musicbrainz.org/browse/PW

A favicon has been added. The Picard icon has also been placed in the
Jumbotron. It doesn't look as good as it should, but I was not able to
think of anyhing else.

The external dependency on OS detection has been replaced by our home
made code. Yay! Although the code works fine on my machine, if anything
wrong ever happens, I'll just point the finger towards bitmap :P

The styles.less has been refactored a bit too.

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -140,20 +140,9 @@ a {
       line-height: 1.25;
    }
 
-   .masthead-links {
-      margin: 25px 0 0 -54px;
-      list-style: none;
-
-      a
-      {
-         color: darken(#fff, 35%);
-      }
-
-      li
-      {
-         display: inline;
-         padding-left: 15px;
-      }
+   .picard-icon
+   {
+      margin-left: -100px;
    }
 
    .download-btn
@@ -193,6 +182,22 @@ a {
          background-image: none;
          background-color: #04C;
          box-shadow: inset 0 5px 10px rgba(0,0,0,.125), 0 1px 2px rgba(0,0,0,.2);
+      }
+   }
+
+   .masthead-links {
+      margin: 25px 0 0 -54px;
+      list-style: none;
+
+      a
+      {
+         color: darken(#fff, 35%);
+      }
+
+      li
+      {
+         display: inline;
+         padding-left: 15px;
       }
    }
 }
